--- a/package.json
+++ b/package.json
@@ -13,13 +13,6 @@
   "author": "RL",
   "license": "ISC",
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.5.1",
-    "eslint": "^8.51.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsdoc": "^46.8.2",
-    "eslint-plugin-n": "^16.2.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^9.17.0"
+    "prettier": "^3.4.1"
   }
 }
